--- a/adventure_game /index.html
+++ b/adventure_game /index.html
@@ -1,7 +1,10 @@
-We are in Lake Tahoe on a cold Friday
-we are walking calmly on steady snow when out of no where you fall in the snow.
-<br> 
-<a href="get-out.html">
-we try getting out </a> 
-<a href="screamed.html"> We scream like crazy</a>
-<a href="We-got-saved.html">We got saved and we went to eat food</a> 
+<html>
+    
+<head>
+    <tittle></tittle>    
+</head>
+<body>
+    Your being held hostage and your blindfolded. The person holding you hostage gives you the choice to take 2 red pills and 2 blue pills if you survive and think smart the person will let you leave.
+</body>
+    
+</html>
