--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<html>
-    
-<head>
-    <tittle></tittle>    
-</head>
-<body>
-    Your being held hostage and your blindfolded. The person holding you hostage gives you the choice to take 2 red pills and 2 blue pills if you survive and think smart the person will let you leave.
-</body>
-    
-</html>
+<DOCTYPE html>
+    <hmtl> 
+        <head> 
+        </head>
+        <a href="about_me.html"> Learn about me peeps</a>
+    </hmtl>
